# myai

./: pyproject.toml  readme.md
myai/: jupyter_tools.py
myai/data/: ds.py
myai/datasets/: base.py  torchvision.py
myai/event_model/: callback.py  event_model.py
myai/learner/: __init__.py  dev.ipynb  learner.py
myai/learner/callbacks/: __init__.py  backward.py  gradient.py  outputs_video.py  perf_tweaks.py  save_preds.py  val.py
myai/loaders/: audio.py  blosc.py  dicom.py  generic.py
myai/logger/: base_logger.py
myai/losses/: __init__.py  cross_entropy.py  dice.py  squentropy.py
myai/metrics/: __init__.py  _utils.py  accuracy_.py  icc_.py  iou_.py
myai/nn/: __init__.py  act.py  conv.py  pool.py  upsample.py
myai/nn/blocks/: block_base.py  conv.py  dropout.py  linear.py  pool.py  upsample.py
myai/nn/nets/: resnet.py  unet.py
myai/nn_old/: __init__.py  aggregate.py  base.py  fft.py  func.py  linear.py  pinv.py  pool.py
myai/nn_old/blocks/: convblock.py
myai/plt_tools/: __init__.py  _norm.py  fig.py  norm.ipynb
myai/python_tools/: __init__.py  files.py  iterables.py  types_.py
myai/python_tools/p311/: __init__.py  files.py  functions.py  identity.py  printing.py  threading_.py  (+2 more)
myai/research/: __init__.py  close.py  landscaper.py
myai/rng/: rng test.ipynb
myai/stuff/: flatten_dir.py
myai/torch_tools/: fast_dataloader.py
myai/transforms/: _base.py  audio.py  format.py  intensity tfms.ipynb  intensity.py  quality.py  spatial.py
myai/utils/: __init__.py
myai/video/: __init__.py  renderer.py
src/myai/: imports.py  jupyter_tools.py
(+412 files in other folders)
