[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myai"
description = "i"

version = "1"
# dependencies = ["numpy"]
requires-python = ">= 3.11"
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
# keywords = ["my", "ai"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
